# cpp_template

./: .gitignore  .travis.yml  Makefile  README.rst  app  autogen.sh  configure.ac  cpusim  fabfile.py  sim_test  test  version.sh
_build/lib/: factorial.d
_build/src/: main.d
_build/tests/: test_factorial.d  test_main.d  test_sanity.d
docs/: DoxygenSetup.rst  ProjectSetup.rst  Template.rst  conf.py  index.rst
docs/_venv/: pip-selfcheck.json
files/: conf.py  index.rst  webbrowser
include/: factorial.h  pylit.h
lib/: factorial.cpp
src/: Makefile  cppdemo  factorial.cpp  main.cpp
src/lib/: Makefile  factorial.cpp  factorial.h
tests/: Makefile  test  test_factorial.cpp  test_sanity.cpp
