AC_PREREQ(2.69)

AC_INIT([pylit6], [m4_esyscmd([./version.sh])], [rblack@austincc.edu])

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(config)
AC_CONFIG_HEADERS([src/platform.h])
AM_INIT_AUTOMAKE(tar-ustar dist-zip foreign)
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_SUBST(PACKAGE_VERSION)

